Version 2.1.0
June TODO 2009
================================================================

* New libraries: ConstantScope, Hash, HashSet.
* Improved package manager, supports parallel downloads in
  web browsers and now also works on server-side platforms
  (tested on SpiderMonkey, Rhino and V8). Also supports custom
  loader functions for integration with Google, YUI etc.
* ObjectMethods module is now called Kernel.
* New Kernel methods: tap(), equals(), hash().
* API change: Set#classify now returns a Hash, not an Object.
* Ancestor and method lookups are cached for improved performance.
* Automatic generation of displayName on methods for integration
  with the WebKit debugger.
* PDoc documentation for the core classes.


Version 1.6.3
March 4 2009
================================================================

* Fixes a bug caused by Function#prototype becoming a non-
  enumerable property in Safari 4, causing classes to inherit
  from themselves and leading to stack overflows.


Version 2.0.2
October 1 2008
================================================================

* The function returned by object.method('callSuper') now behaves
  correctly when called after the containing method has returned.


Version 1.6.2
October 1 2008
================================================================

* Fixes some bugs to make various forEach() methods more robust.


Version 2.0.1
September 14 2008
================================================================

* Fixes a super()-related bug in Command.
* Better handling of 'include' and 'extend' directives such
  that these are processed before all the other methods are
  added. This allows mixins to override parts of the including
  class to affect future method definitions.
* Module#include() has been fixed so that overriding it produces
  more sane behaviour with respect to classes that delegate to
  a module behind the scenes to store methods.


Version 2.0.0
August 12 2008